# whoami

./: .gitignore  Cargo.toml  NOTICE  README.md  clippy.toml
.github/workflows/: build.yml  migrate.yml  release.yml
contracts/did/: Cargo.toml  LICENSE
contracts/did/src/: contract.rs  lib.rs  msg.rs  state.rs  validation_helpers.rs
contracts/whoami/: Cargo.toml
contracts/whoami/schema/: address_of_response.json  all_nft_info_response.json  contract_info_response.json  get_parent_id_response.json  get_path_response.json  is_contract_response.json  minting_fees_response.json  primary_alias_response.json  query_msg.json
contracts/whoami/scripts/: check.sh  deploy_ci.sh  docker_cleanup.sh
contracts/whoami/src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
examples/: schema.rs
schema/: all_nft_info_response.json  contract_info_response.json  execute_msg.json  instantiate_msg.json  list_user_info_response.json  migrate_msg.json  nft_info_response.json  query_msg.json
scripts/: build_optimised_release.sh  build_optimized.sh  check.sh  deploy_ci.sh  deploy_contracts.sh  deploy_local.sh  deploy_prod.sh  deploy_v230_contracts.sh  execute_contract.sh  instantiate_again.sh  test_migrate.sh  whole_script.sh
src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  utils.rs
versioned_builds/: whoami_0_5_1.wasm
whoami-dapp/: .env.example  package-lock.json  package.json
whoami-dapp/components/: Layout.tsx  PageLink.tsx  WalletLoader.tsx
whoami-dapp/pages/: index.tsx  send.tsx
whoami-dapp/services/: keplr.tsx
