[package]
name = "whoami"
version = "0.4.0"
authors = ["Alex Lynham <alex@lynh.am>"]
edition = "2018"
description = "NFT based metadata for PFP/user directory purposes"
license = "Apache-2.0"
repository = "https://github.com/envoylabs/whoami"
homepage = ""
documentation = "https://docs.cosmwasm.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "0.10.2" }
cw20-base = { version = "0.10.2", features = ["library"] }
cw20 = { version = "0.10.2" }
cw721 = { version = "0.10.1" }
cw721-base = { version = "0.10.1", features = ["library"] }
cw-storage-plus = { version = "0.10.2" }
cosmwasm-std = { version = "1.0.0-beta2" }
schemars = "0.8.6"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta2" }

[dependencies.regex]
version = "1.5.4"
default-features = false
features = ["std", "perf-dfa", "perf-inline", "perf-cache"]